--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "bads"]
 	path = bads
 	url = https://github.com/acerbilab/bads.git
+[submodule "fmin_adam"]
+	path = fmin_adam
+	url = https://github.com/DylanMuir/fmin_adam
+[submodule "spatialmath-matlab"]
+	path = spatialmath-matlab
+	url = https://github.com/petercorke/spatialmath-matlab.git
